--- a/S8.01-Visualitzacions-Python.ipynb
+++ b/S8.01-Visualitzacions-Python.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "cb04070a-412f-459c-9cb1-fbbd6fe2414f",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "id": "4c1dca2c-16a6-41f6-ba00-866d2f39e243",
    "metadata": {},
    "outputs": [],
@@ -158,20 +158,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "6210b620-99d3-432e-b8d3-602a17efa3e0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['card_state', 'companies', 'credit_cards', 'product_transaction', 'products', 'transactions', 'users']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['card_state',\n",
+       " 'companies',\n",
+       " 'credit_cards',\n",
+       " 'product_transaction',\n",
+       " 'products',\n",
+       " 'transactions',\n",
+       " 'users']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(nombre_tablas)\n",
+    "#print(nombre_tablas)\n",
+    "nombre_tablas\n",
     "#df_transactions"
    ]
   },
@@ -185,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "ff4c28ec-9152-4bad-803d-99c82fcfd9c1",
    "metadata": {},
    "outputs": [],
@@ -226,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "9c28f7c4-aed2-495a-a726-ab7a1e6156eb",
    "metadata": {},
    "outputs": [
@@ -244,7 +254,7 @@
        "Name: amount, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "095a8100-87eb-4c2c-93dd-1c2f8c901dd3",
    "metadata": {},
    "outputs": [],
@@ -378,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "2947ea12-84ac-42d9-aa94-1bd271428174",
    "metadata": {},
    "outputs": [
@@ -388,7 +398,7 @@
        "True"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "52648ef4-bc56-435b-bbbb-114dadc223f3",
    "metadata": {},
    "outputs": [],
