--- a/Apunts.ipynb
+++ b/Apunts.ipynb
@@ -111,6 +111,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80191dfa-37ca-4bdc-a0e5-ccd4750d87e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy import create_engine, inspect\n",
+    "\n",
+    "engine = create_engine(\"mysql+pymysql://root@localhost/borrar\")\n",
+    "cnx = engine.connect()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "97e1728a-76e9-45d2-85be-549bc040b604",
    "metadata": {},
@@ -195,27 +210,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72f3d305-302e-4cae-8744-7a3f291a7d24",
-   "metadata": {},
-   "source": [
-    "## Exercici 1\n",
-    "Una variable numèrica."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25e38ce1-29c3-49e0-928e-6b02ff0f78b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "af0dd8b4-cff2-448b-ad23-920c242c5d5c",
    "metadata": {},
    "source": [
     "### Sintàxis de pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f6a89fc-8585-4a69-bd7f-b17523eb7300",
+   "metadata": {},
+   "source": [
+    "df.head() # por defecto son 5\n",
+    "df.head(8) # muestro primeras 8 \n",
+    "df.tail(8) # muestro ultimos 8\n",
+    "df.shape    #cantidad de filas (1°) y luego columnas\n",
+    "df.describe() #estadísticas descriptivas\n",
+    "\n",
+    "tipos de datos:\n",
+    "\n",
+    "df.info() #todos los datos, tambien cantidad de valores no nulos.\n",
+    "df.dtypes #todos los datos de todo el df, object=varchar\n",
+    "df[\"columna\"].dtype #datos de esa columna"
    ]
   },
   {
@@ -305,6 +321,43 @@
    ],
    "source": [
     "sns.histplot(df_transactions[\"amount\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "085d4052-249b-4f9e-a147-5f5e5629363e",
+   "metadata": {},
+   "source": [
+    "### Eliminar base de dades"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1301c0bb-8388-4417-9275-fb83fc158f71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "d60ab253-1420-4d9e-bb47-a7e4d0a935c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x23a3ff4d090>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnx.execute(\"DROP DATABASE borrar\")"
    ]
   },
   {
