--- a/pandas_practicant.ipynb
+++ b/pandas_practicant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "701fa7ae-21e0-43c1-b9ba-bc1bb7979785",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "id": "77c8e157-ce44-46cb-95b1-46f811660a6d",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "id": "0f997e24-419b-49f9-a288-01a8e27fb467",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 22,
    "id": "fba82844-df12-4d59-99cc-989c8addcbfa",
    "metadata": {},
    "outputs": [
@@ -337,13 +337,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -351,11 +346,10 @@
       ],
       "text/plain": [
        "   index  Albert\n",
-       "0      0      16\n",
-       "1      2      18"
+       "0      1       6"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,18 +384,215 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "936455c2-f8d1-40e0-b449-70b5081fe56b",
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "dace6b9a-0dfd-4a74-8d7b-5a090da9bc1c",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  C   D\n",
+       "0  2  2   7\n",
+       "1  5  8  19\n",
+       "2  3  8  15"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#Exercici 3: Afegir i eliminar columnes\n",
+    "#Afegeix una nova columna al DataFrame anterior que sigui la suma de les altres dues columnes.\n",
+    "#Elimina una de les columnes originals.\n",
+    "df[\"D\"] = df[\"A\"] + df[\"B\"] + df[\"C\"]\n",
     "\n",
+    "df\n",
     "\n",
-    "Exercici 3: Afegir i eliminar columnes\n",
-    "Afegeix una nova columna al DataFrame anterior que sigui la suma de les altres dues columnes.\n",
-    "Elimina una de les columnes originals.\n",
-    "Exercici 4: Agrupar i agregar\n",
-    "Crea un DataFrame amb dues columnes: una amb noms de categories (com 'A', 'B', 'C') i una altra amb valors enters.\n",
-    "Agrupa el DataFrame per la columna de categories i calcula la suma dels valors per a cada categoria."
+    "df = df.drop(\"B\", axis = 1)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "54fd0ab2-c5e8-4734-9148-284673732eab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Values</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Category</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Values\n",
+       "Category        \n",
+       "A              3\n",
+       "B              7\n",
+       "C             11"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Exercici 4: Agrupar i agregar\n",
+    "#Crea un DataFrame amb dues columnes: una amb noms de categories (com 'A', 'B', 'C') i una altra amb valors enters.\n",
+    "#Agrupa el DataFrame per la columna de categories i calcula la suma dels valors per a cada categoria.\n",
+    "data = {\n",
+    "    'Category': ['A', 'A', 'B', 'B', 'C', 'C'],\n",
+    "    'Values': [1, 2, 3, 4, 5, 6]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "grouped = df.groupby(\"Category\").sum()\n",
+    "grouped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "24545e7c-c74b-40db-b2ad-9ee5ec239217",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3 entries, A to C\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column  Non-Null Count  Dtype\n",
+      "---  ------  --------------  -----\n",
+      " 0   Values  3 non-null      int64\n",
+      "dtypes: int64(1)\n",
+      "memory usage: 48.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "grouped.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d07ac73e-b04b-43f7-93c8-f2c9de5c4fe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Values    int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped.dtypes"
    ]
   }
  ],
