--- a/0. Apunts.ipynb
+++ b/0. Apunts.ipynb
@@ -102,8 +102,8 @@
     "#Importar altres llibreries\n",
     "import matplotlib.pyplot as plt #genera gràfics a partir de continguts en llistes, vector amb py i amb l'extensió NumPy\n",
     "import seaborn as sns #llibreria especialitzada en visualització de dades per py desenvolupada amb matplotlib  i ofereix interficie d'alt nivell\n",
-    "import squarify\n",
-    "import plotly.express as px\n",
+    "#import squarify\n",
+    "#import plotly.express as px\n",
     "import numpy as np\n",
     "import warnings\n",
     "\n",
